Only start service if minion ID file is not there

--- a/_release/device-register.service
+++ b/_release/device-register.service
@@ -1,6 +1,7 @@
 [Unit]
 Description=Cacophony device register service
 After=multi-user.target network.target
+ConditionPathExists=!/etc/salt/minion_id
 
 [Service]
 ExecStart=/usr/bin/device-register -r
