Made service type oneshot

--- a/_release/device-register.service
+++ b/_release/device-register.service
@@ -5,8 +5,7 @@ ConditionPathExists=!/etc/salt/minion_id
 
 [Service]
 ExecStart=/usr/bin/device-register -r
-Restart=on-failure
-RestartSec=5s
+Type=oneshot
 
 [Install]
 WantedBy=multi-user.target
