--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -4,29 +4,41 @@ release:
     owner: TheCacophonyProject
     name: device-register
   name_template: '{{.Tag}}'
+
 builds:
-- goos:
+- id: device-register
+  goos:
   - linux
   goarch:
   - arm
   goarm:
   - "7"
-  main: .
+  main: ./cmd/device-register
   ldflags: -s -w -X main.version={{.Version}}
   binary: device-register
+- id: device-rename
+  goos:
+  - linux
+  goarch:
+  - arm
+  goarm:
+  - "7"
+  main: ./cmd/device-rename
+  ldflags: -s -w -X main.version={{.Version}}
+  binary: device-rename
 
-nfpm:
-  vendor: The Cacophony Project
-  homepage: http://cacophony.org.nz/
-  maintainer: Cacophony Developers <coredev@cacophony.org.nz>
-  description: Register device to cacophony API
-  license: GPL v3.0
-  name_template: "{{ .ProjectName }}_{{ .Version }}_{{ .Arch }}"
-  formats:
-    - deb
-  bindir: /usr/bin
-  files:
-    "_release/device-register.service": "/etc/systemd/system/device-register.service"
+nfpms:
+  - vendor: The Cacophony Project
+    homepage: http://cacophony.org.nz/
+    maintainer: Cacophony Developers <coredev@cacophony.org.nz>
+    description: Register device to cacophony API
+    license: GPL v3.0
+    name_template: "{{ .ProjectName }}_{{ .Version }}_{{ .Arch }}"
+    formats:
+      - deb
+    bindir: /usr/bin
+    files:
+      "_release/device-register.service": "/etc/systemd/system/device-register.service"
 checksum:
   name_template: '{{ .ProjectName }}_{{ .Version }}_checksums.txt'
 dist: dist
