Make service command clearer

--- a/_release/device-register.service
+++ b/_release/device-register.service
@@ -4,7 +4,7 @@ After=multi-user.target network.target
 ConditionPathExists=!/etc/salt/minion_id
 
 [Service]
-ExecStart=/usr/bin/device-register -r
+ExecStart=/usr/bin/device-register --reboot
 Type=oneshot
 
 [Install]
