--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -24,7 +24,7 @@ nfpms:
     maintainer: Cacophony Developers <coredev@cacophony.org.nz>
     description: Register device to cacophony API
     license: GPL v3.0
-    name_template: "{{ .ProjectName }}_{{ .Version }}_{{ .Arch }}"
+    file_name_template: "{{ .ProjectName }}_{{ .Version }}_{{ .Arch }}"
     formats:
       - deb
     bindir: /usr/bin
