Add option to retry until registered

--- a/_release/device-register.service
+++ b/_release/device-register.service
@@ -4,7 +4,7 @@ After=multi-user.target network.target
 ConditionPathExists=!/etc/salt/minion_id
 
 [Service]
-ExecStart=/usr/bin/device-register --reboot
+ExecStart=/usr/bin/device-register --reboot --retry-until-registered
 Type=oneshot
 
 [Install]
